# easehtslib

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bam_index_reader.cpp  bam_index_reader.h  easehts.h  main.cpp  main_unittest.cpp  reader.h  reader_unittest.cpp  sam_bam_normal_reader.h  sam_bam_read_unittest.cpp  sam_bam_record.h  sam_file_header.h  sam_sequence_dictionary.h  sam_text_header_codec.cpp  sam_text_header_codec.h  sam_text_read_unittest.cpp  sam_text_reader.cpp  sam_text_reader.h  utils.h
